--- a/.github/workflows/main_secure-sass.yml
+++ b/.github/workflows/main_secure-sass.yml
@@ -1,7 +1,10 @@
 name: Secure Saas CI CD
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: secure-saas-frontend   # set this to your application's name
